--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: python
+before_install:
+    - pip install coveralls
+    - pip install coverage
 script:
     - python -m unittest
+    - coverage run -m unittest
+after_success:
+    - coveralls
