--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: python
-before_install:
+python:
+    - "3.2"
+    - "3.3"
+    - "3.4"
+    - "3.5"
+install:
     - pip install coveralls coverage
 script:
     - coverage run -m unittest
