--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: python
 python:
-    - "3.2"
-    - "3.3"
     - "3.4"
-    - "3.5"
-install:
-    - pip install coveralls coverage
+install: "pip install -r requirements.txt"
 script:
     - coverage run -m unittest
 after_success:
