--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ python:
 install: "pip install -r requirements.txt"
 script:
     - coverage run --omit "*init*.py,test/*,*/.local/lib64/*,*/.local/lib/*,*/site-packages/*" -m unittest
+    - sonar-scanner
 after_success:
     - coveralls
+addons:
+    sonarcloud:
+        organization: "rafspiny-github" # the key of the org you chose at step #3
