debugging travis integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install: "pip install -r requirements.txt"
 script:
     - coverage run --omit "*init*.py,test/*,*/.local/lib64/*,*/.local/lib/*,*/site-packages/*" -m unittest
-    - sonar-scanner
+    - sonar-scanner -X
 after_success:
     - coveralls
 addons:
