Playing with sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/rafspiny/firefox-profiles-recovery/issues
 # =====================================================
 
 # SQ standard properties
-sonar.sources=model,logic
+sonar.sources=model
 sonar.tests=test
 
 # Properties specific to language plugins:
