Playing with sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,3 +25,5 @@ sonar.tests=test
 # Leaving it unset, use the defautl value "coverage-reports/*coverage-*.xml")
 #sonar.python.coverage.reportPath=reports/js/lcov.dat
 
+# Options for branch pluing
+sonar.branch.name=development
