Playing with sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=corg.rafspiny.linux.firefox-profile-recover
 sonar.projectName=Firefox-profile-recover
 sonar.projectVersion=0.0.1
+sonar.login=github2
 
 # =====================================================
 #   Meta-data for the project
