Experimenting with sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,13 +18,5 @@ sonar.links.issue=https://github.com/rafspiny/firefox-profiles-recovery/issues
 # =====================================================
 
 # SQ standard properties
-sonar.sources=model
+sonar.sources=logic,model
 sonar.tests=test
-
-# Properties specific to language plugins:
-#   - For JavaScript
-# Leaving it unset, use the defautl value "coverage-reports/*coverage-*.xml")
-#sonar.python.coverage.reportPath=reports/js/lcov.dat
-
-# Options for branch pluing
-sonar.branch.name=development
