Forgot to post the coverage data

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
     - sonar-scanner
 after_success:
     - coveralls
+    - codecov
 addons:
     sonarcloud:
         organization: "rafspiny-github" # the key of the org you chose at step #3
