--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
     - sonar-scanner
 after_success:
     - coveralls
-    - codecov
+    - bash <(curl -s https://codecov.io/bash)
 addons:
     sonarcloud:
         organization: "rafspiny-github" # the key of the org you chose at step #3
